--- a/.github/workflows/agda-ci.yml
+++ b/.github/workflows/agda-ci.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  agda-build:
+  build:
     name: Agda ${{ matrix.agda }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
@@ -56,3 +56,31 @@ jobs:
       - name: Run Agda
         working-directory: src
         run: agda Everything.agda --html
+
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: src/html
+
+  # Deploy job, see https://github.com/actions/deploy-pages/tree/f81ad71d2e78487340fb3a94726f2a6050466efd#readme
+  deploy:
+    if: github.ref == 'refs/heads/master'
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages:    write   # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Deploy to GitHub Pages
+      id:   deployment
+      uses: actions/deploy-pages@v2
